tests/ui/proc-macro/parent-source-spans.stderr
error: first final: "hello"
  --> $DIR/parent-source-spans.rs:16:12
   |
LL | / macro one($a:expr, $b:expr) {
LL | |     two!($a, $b);
   | |     ------------ in this macro invocation (#2)
LL | |
LL | |
LL | | }
   | |_- in this expansion of `one!` (#1)
LL |
LL | / macro two($a:expr, $b:expr) {
LL | |     three!($a, $b);
   | |            ^^
LL | |
LL | |
LL | |
LL | |
LL | | }
   | |_- in this expansion of `two!` (#2)
...
LL |       one!("hello", "world");
   |       ---------------------- in this macro invocation (#1)

error: second final: "world"
  --> $DIR/parent-source-spans.rs:16:16
   |
LL | / macro one($a:expr, $b:expr) {
LL | |     two!($a, $b);
   | |     ------------ in this macro invocation (#2)
LL | |
LL | |
LL | | }
   | |_- in this expansion of `one!` (#1)
LL |
LL | / macro two($a:expr, $b:expr) {
LL | |     three!($a, $b);
   | |                ^^
LL | |
LL | |
LL | |
LL | |
LL | | }
   | |_- in this expansion of `two!` (#2)
...
LL |       one!("hello", "world");
   |       ---------------------- in this macro invocation (#1)

error: first parent: "hello"
  --> $DIR/parent-source-spans.rs:10:5
   |
LL | / macro one($a:expr, $b:expr) {
LL | |     two!($a, $b);
   | |     ^^^^^^^^^^^^
LL | |
LL | |
LL | | }
   | |_- in this expansion of `one!`
...
LL |       one!("hello", "world");
   |       ---------------------- in this macro invocation

error: second parent: "world"
  --> $DIR/parent-source-spans.rs:10:5
   |
LL | / macro one($a:expr, $b:expr) {
LL | |     two!($a, $b);
   | |     ^^^^^^^^^^^^
LL | |
LL | |
LL | | }
   | |_- in this expansion of `one!`
...
LL |       one!("hello", "world");
   |       ---------------------- in this macro invocation

error: first grandparent: "hello"
  --> $DIR/parent-source-spans.rs:36:5
   |
LL |     one!("hello", "world");
   |     ^^^^^^^^^^^^^^^^^^^^^^

error: second grandparent: "world"
  --> $DIR/parent-source-spans.rs:36:5
   |
LL |     one!("hello", "world");
   |     ^^^^^^^^^^^^^^^^^^^^^^

error: first source: "hello"
  --> $DIR/parent-source-spans.rs:36:5
   |
LL |     one!("hello", "world");
   |     ^^^^^^^^^^^^^^^^^^^^^^

error: second source: "world"
  --> $DIR/parent-source-spans.rs:36:5
   |
LL |     one!("hello", "world");
   |     ^^^^^^^^^^^^^^^^^^^^^^

error: first final: "yay"
  --> $DIR/parent-source-spans.rs:16:12
   |
LL | / macro two($a:expr, $b:expr) {
LL | |     three!($a, $b);
   | |            ^^
LL | |
LL | |
LL | |
LL | |
LL | | }
   | |_- in this expansion of `two!`
...
LL |       two!("yay", "rust");
   |       ------------------- in this macro invocation

error: second final: "rust"
  --> $DIR/parent-source-spans.rs:16:16
   |
LL | / macro two($a:expr, $b:expr) {
LL | |     three!($a, $b);
   | |                ^^
LL | |
LL | |
LL | |
LL | |
LL | | }
   | |_- in this expansion of `two!`
...
LL |       two!("yay", "rust");
   |       ------------------- in this macro invocation

error: first parent: "yay"
  --> $DIR/parent-source-spans.rs:42:5
   |
LL |     two!("yay", "rust");
   |     ^^^^^^^^^^^^^^^^^^^

error: second parent: "rust"
  --> $DIR/parent-source-spans.rs:42:5
   |
LL |     two!("yay", "rust");
   |     ^^^^^^^^^^^^^^^^^^^

error: first source: "yay"
  --> $DIR/parent-source-spans.rs:42:5
   |
LL |     two!("yay", "rust");
   |     ^^^^^^^^^^^^^^^^^^^

error: second source: "rust"
  --> $DIR/parent-source-spans.rs:42:5
   |
LL |     two!("yay", "rust");
   |     ^^^^^^^^^^^^^^^^^^^

error: first final: "hip"
  --> $DIR/parent-source-spans.rs:48:12
   |
LL |     three!("hip", "hop");
   |            ^^^^^

error: second final: "hop"
  --> $DIR/parent-source-spans.rs:48:19
   |
LL |     three!("hip", "hop");
   |                   ^^^^^

error: first source: "hip"
  --> $DIR/parent-source-spans.rs:48:12
   |
LL |     three!("hip", "hop");
   |            ^^^^^

error: second source: "hop"
  --> $DIR/parent-source-spans.rs:48:19
   |
LL |     three!("hip", "hop");
   |                   ^^^^^

error[E0425]: cannot find value `ok` in this scope
  --> $DIR/parent-source-spans.rs:29:5
   |
LL | / macro one($a:expr, $b:expr) {
LL | |     two!($a, $b);
   | |     ------------ in this macro invocation (#2)
LL | |
LL | |
LL | | }
   | |_- in this expansion of `one!` (#1)
LL |
LL | / macro two($a:expr, $b:expr) {
LL | |     three!($a, $b);
   | |     -------------- in this macro invocation (#3)
LL | |
LL | |
LL | |
LL | |
LL | | }
   | |_- in this expansion of `two!` (#2)
...
LL | / macro three($($tokens:tt)*) {
LL | |     four!($($tokens)*);
   | |     ------------------ in this macro invocation (#4)
LL | | }
   | |_- in this expansion of `three!` (#3)
LL |
LL | / macro four($($tokens:tt)*) {
LL | |     parent_source_spans!($($tokens)*);
   | |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | |     |
   | |     help: a tuple variant with a similar name exists: `Ok`
   | |     in this macro invocation (#5)
LL | |
LL | |
LL | |
LL | | }
   | |_- in this expansion of `four!` (#4)
...
LL |       one!("hello", "world");
   |       ---------------------- in this macro invocation (#1)
  --> $SRC_DIR/core/src/result.rs:LL:COL
   |
   = note: similarly named tuple variant `Ok` defined here
   |
  ::: $DIR/auxiliary/parent-source-spans.rs:20:1
   |
LL |   pub fn parent_source_spans(input: TokenStream) -> TokenStream {
   |   ------------------------------------------------------------- in this expansion of `parent_source_spans!` (#5)

error[E0425]: cannot find value `ok` in this scope
  --> $DIR/parent-source-spans.rs:29:5
   |
LL | / macro two($a:expr, $b:expr) {
LL | |     three!($a, $b);
   | |     -------------- in this macro invocation (#2)
LL | |
LL | |
LL | |
LL | |
LL | | }
   | |_- in this expansion of `two!` (#1)
...
LL | / macro three($($tokens:tt)*) {
LL | |     four!($($tokens)*);
   | |     ------------------ in this macro invocation (#3)
LL | | }
   | |_- in this expansion of `three!` (#2)
LL |
LL | / macro four($($tokens:tt)*) {
LL | |     parent_source_spans!($($tokens)*);
   | |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | |     |
   | |     help: a tuple variant with a similar name exists: `Ok`
   | |     in this macro invocation (#4)
LL | |
LL | |
LL | |
LL | | }
   | |_- in this expansion of `four!` (#3)
...
LL |       two!("yay", "rust");
   |       ------------------- in this macro invocation (#1)
  --> $SRC_DIR/core/src/result.rs:LL:COL
   |
   = note: similarly named tuple variant `Ok` defined here
   |
  ::: $DIR/auxiliary/parent-source-spans.rs:20:1
   |
LL |   pub fn parent_source_spans(input: TokenStream) -> TokenStream {
   |   ------------------------------------------------------------- in this expansion of `parent_source_spans!` (#4)

error[E0425]: cannot find value `ok` in this scope
  --> $DIR/parent-source-spans.rs:29:5
   |
LL | / macro three($($tokens:tt)*) {
LL | |     four!($($tokens)*);
   | |     ------------------ in this macro invocation (#2)
LL | | }
   | |_- in this expansion of `three!` (#1)
LL |
LL | / macro four($($tokens:tt)*) {
LL | |     parent_source_spans!($($tokens)*);
   | |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | |     |
   | |     help: a tuple variant with a similar name exists: `Ok`
   | |     in this macro invocation (#3)
LL | |
LL | |
LL | |
LL | | }
   | |_- in this expansion of `four!` (#2)
...
LL |       three!("hip", "hop");
   |       -------------------- in this macro invocation (#1)
  --> $SRC_DIR/core/src/result.rs:LL:COL
   |
   = note: similarly named tuple variant `Ok` defined here
   |
  ::: $DIR/auxiliary/parent-source-spans.rs:20:1
   |
LL |   pub fn parent_source_spans(input: TokenStream) -> TokenStream {
   |   ------------------------------------------------------------- in this expansion of `parent_source_spans!` (#3)

error: aborting due to 21 previous errors

For more information about this error, try `rustc --explain E0425`.
